# project_my

./: .flake8  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: conftest.py  tests_masks.py  tests_processing.py  tests_widget.py
