[project]
name = "project-my"
version = "0.1.0"
description = ""
authors = [
    {name = "Nastya",email = "galeskarova@list.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "masks (>=0.1.3,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'